--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body{
+    background-color: black;
     display: flex;
     justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -6,6 +7,8 @@ body{
 
 .calc-container{
     background-color: black;
+    border-radius: 12px;
+    box-shadow: inset 0px 0px 5px 0px white;
     height: 350px;
     aspect-ratio: 2/3;
     padding: 8px;
